varasto hoitaa tuotteen poistamisen